--- a/cluster/core/cert-manager/issuers/secret.sops.yaml
+++ b/cluster/core/cert-manager/issuers/secret.sops.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: cloudflare-api-token-secret
+    name: cloudflare-token-secret
     namespace: cert-manager
 type: Opaque
 stringData:
-    api-token: ENC[AES256_GCM,data:DTualYTLhTebWSdNMWNlTrTJ6xOl+iiF8weZdZolOWy5x/Srrf33SQ==,iv:hoYYLFeDtmbi91UGo3Da3IXnNj3Kn+Z+TOR65VtwX/o=,tag:2qzVNuW2r7Z0rvQhN9KzHQ==,type:str]
+    cloudflare-token: ENC[AES256_GCM,data:DTualYTLhTebWSdNMWNlTrTJ6xOl+iiF8weZdZolOWy5x/Srrf33SQ==,iv:hoYYLFeDtmbi91UGo3Da3IXnNj3Kn+Z+TOR65VtwX/o=,tag:2qzVNuW2r7Z0rvQhN9KzHQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
