--- a/.sourceignore
+++ b/.sourceignore
@@ -1,8 +1,10 @@
 # See https://toolkit.fluxcd.io/components/source/gitrepositories/#excluding-files
 .github/
+.taskfiles/
 .vscode/
 .gitattributes
 .pre-commit-config.yaml
 .gitignore
 .sops.yaml
 README.md
+Taskfile.yaml
