--- a/cluster/apps/networking/certificates/certificate01.yaml
+++ b/cluster/apps/networking/certificates/certificate01.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   secretName: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
   issuerRef:
-    name: letsencrypt-staging
+    name: letsencrypt-production
     kind: ClusterIssuer
   commonName: "${SECRET_PUBLIC_DOMAIN}"
   dnsNames:
