--- a/cluster/apps/networking/ingressroutes/auth-ingressroute.yaml
+++ b/cluster/apps/networking/ingressroutes/auth-ingressroute.yaml
@@ -2,20 +2,17 @@
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
-  name: lidarr-ingress
+  name: authelia-ingress
   namespace: networking
 spec:
   entryPoints:
     - websecure
   routes:
-    - match: Host(`lidarr.tinfoilforest.nz`)
+    - match: Host(`auth.tinfoilforest.nz`)
       kind: Rule
-      middlewares:
-      - name: chain-authelia-auth
-        namespace: auth
       services:
-        - name: lidarr
-          namespace: default
-          port: 8686
+        - name: authelia
+          namespace: auth
+          port: 80
   tls:
     secretName: tinfoilforest-nz-tls
