trying to fix chart definition

--- a/cluster/charts/helm/helm-openldap-charts.yaml
+++ b/cluster/charts/helm/helm-openldap-charts.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
@@ -5,5 +6,5 @@ metadata:
   namespace: flux-system
 spec:
   interval: 1h
-  url: https://jp-gouin.github.io/helm-openldap/
+  url: https://jp-gouin.github.io/helm-openldap
   timeout: 3m
