--- a/cluster/apps/auth/authelia/secret.sops.yaml
+++ b/cluster/apps/auth/authelia/secret.sops.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: auth-redis-secrets
+    name: authelia-secrets
     namespace: auth
 type: Opaque
 stringData:
