postgress password key

--- a/cluster/apps/auth/postgresql/secret.sops.yaml
+++ b/cluster/apps/auth/postgresql/secret.sops.yaml
@@ -5,7 +5,7 @@ metadata:
     namespace: auth
 type: Opaque
 stringData:
-    postgres-password: ENC[AES256_GCM,data:0S/PMaS6eRfOX4t91UBRvXWAKMpOHc2Je5JTW4rt,iv:ZYDgNGdnSUp6SnNNz+Xt+F21c1XUYiqHM+kiW00NSLc=,tag:5jQ6EV+JB7ea+NA6LKgJtg==,type:str]
+    password: ENC[AES256_GCM,data:ZIPxGrO5Va2SSWadf6nEZiogoLF8MDq8C9SmnqhV,iv:QEZ0UodMPMNIM4B97D+zmnNyxNBoqHUT7fYKRmyffxY=,tag:HgVDYwHow86LnCJ5tVzwgg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +15,14 @@ sops:
         - recipient: age17r33fln8jyfzrdxshtnv38dmyst33q8g3c2c5f9r8lcvkxa4ggrq07sffm
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5NnM5SVAxd2ZRWnA5eEZH
-            d1l2cVB1bldJSWthTkxoMUhXeCtWQkFkQXhNCkdVVmIvRUgwS2xSSUtSck1mSkNq
-            U01oUnJLNjZicXFDVmNka3J6UkJ5RzAKLS0tIGpGNVpET1NwTnFZTytSQWNXbkM3
-            RnkvcTc1emdSUGhRUkc4V21sZW5DL00KdNH00MH0IyeqFzugh+ZficxypFXo0G9x
-            A6l8TtCSiFYLuI5ZtS+CqTy1NQfbOwu+ox0O/mv8XYewUGUm1QWFhw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXWFdUb3dKWHNlSGcyTC9S
+            MjVtVkQyaWNnU29oNnhFY0s5N2xKZlpaUFEwCndrNG1vZ2VlYXdlWW1HMHNuUHBk
+            NW9Lamp3N216MVlHbEw3R3BLM1JqYnMKLS0tIFFiamxGZDQraWhOOVBCb0lZMytp
+            SHZLTWRJc3dGaW8xT2d4L1RVYW1GWFkKqpnkHi1BtcqWk33nXTyVciDzDH3AX7In
+            YEwACPo7DHUaoef4syAPaVmfcq2bqYyjrVlIqlcLn26D9NwAaMBPxg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-21T06:21:02Z"
-    mac: ENC[AES256_GCM,data:r6gGQBg492D/PeM0Hn3oBgFmqJ1eyUdJAnq74ymDTR0OahTtZU0ZJQNv29evRRx8cWEaZUeGvincBar4ZRNXoshhDoeiLXa2NJ+dlzEbqkyq5x5AwfJp4l/te78HqJPM5Jdr9mYhVcl6OsKchTRER6xrK9KAzM4E5i1cb7DZs9s=,iv:EWHdWhHH5JLblOkCAA32y/eeKhjrjlXUdlEWO5z917I=,tag:D72WHGO358jrmLr6BnqMsg==,type:str]
+    lastmodified: "2022-05-21T07:27:34Z"
+    mac: ENC[AES256_GCM,data:pA754R3vJDeXbwLF+FqvLcDDtmA4x39wcM4z9IRLqrfh0rcFr6nQ0v/ox2iCFhrMnHqjtTwPhTI4VYJuVsO0C58h+NadIKStN8Ny8SA2YEEdR0iKvenTcMi8wJBFUw0r2TOtxk0FhZCwGkvqJhaDy8YNYLQZabFNl5bxXhVrbkI=,iv:Uy1/bgHh3xrl/4J6FBoBJnpxvdHm0Zwp5ZIQAEbpFzA=,tag:dI8rU8+1ce/ZQgjVs7xOOA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
