--- a/cluster/apps/auth/postgresql/secret.sops.yaml
+++ b/cluster/apps/auth/postgresql/secret.sops.yaml
@@ -4,8 +4,10 @@ metadata:
     name: auth-postgresql-secrets
     namespace: auth
 type: Opaque
+# aparently needs both of these passwords
 stringData:
-    password: ENC[AES256_GCM,data:ZIPxGrO5Va2SSWadf6nEZiogoLF8MDq8C9SmnqhV,iv:QEZ0UodMPMNIM4B97D+zmnNyxNBoqHUT7fYKRmyffxY=,tag:HgVDYwHow86LnCJ5tVzwgg==,type:str]
+    postgres-password: ENC[AES256_GCM,data:PZAgKkLO6GRrxbjFTXcrjrTJvXMe+g5Vzy18VXbq,iv:wjjZ1q40kkAUkBmwlKnUT5lx70RI2zLc/ZMl+p3lMa8=,tag:zRt6+oaytFFisvobYDw7yQ==,type:str]
+    password: ENC[AES256_GCM,data:WrDcRwq/0t4WTPf4SD67AdFPqqb8ki6gtcViNSSz,iv:OlPE/+DD16BPgMNtbFzbsgZTF7+kqyQffqr1E73GYnc=,tag:J+PIwGkFTo0eO5kaejCNFQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +17,14 @@ sops:
         - recipient: age17r33fln8jyfzrdxshtnv38dmyst33q8g3c2c5f9r8lcvkxa4ggrq07sffm
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXWFdUb3dKWHNlSGcyTC9S
-            MjVtVkQyaWNnU29oNnhFY0s5N2xKZlpaUFEwCndrNG1vZ2VlYXdlWW1HMHNuUHBk
-            NW9Lamp3N216MVlHbEw3R3BLM1JqYnMKLS0tIFFiamxGZDQraWhOOVBCb0lZMytp
-            SHZLTWRJc3dGaW8xT2d4L1RVYW1GWFkKqpnkHi1BtcqWk33nXTyVciDzDH3AX7In
-            YEwACPo7DHUaoef4syAPaVmfcq2bqYyjrVlIqlcLn26D9NwAaMBPxg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxL0xLSW9ISklvbkc3WHd3
+            K0MyL1RlUFZNZ3VBV2MySitYK2NZaU9kMkU0CjVUZ3hlODl5SGVIZ2d0a0lLZ1NN
+            WWFSMnNaQkltUHZ4TDdoeGRWOEZBSlkKLS0tIHFPOEQ2cXoyWjhrcHhJaCsra2hG
+            Wlg5ZXEwU29CSyt0S25kQlJvbGVLVncKR6QhC+19MX3uCZ4PR6FTp0frEXRnXA2M
+            9sBW1E1DvbFgxrznBnnmbg83eFl4R5yKwhZVXn1TTs2VgRvdA2iaXQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-21T07:27:34Z"
-    mac: ENC[AES256_GCM,data:pA754R3vJDeXbwLF+FqvLcDDtmA4x39wcM4z9IRLqrfh0rcFr6nQ0v/ox2iCFhrMnHqjtTwPhTI4VYJuVsO0C58h+NadIKStN8Ny8SA2YEEdR0iKvenTcMi8wJBFUw0r2TOtxk0FhZCwGkvqJhaDy8YNYLQZabFNl5bxXhVrbkI=,iv:Uy1/bgHh3xrl/4J6FBoBJnpxvdHm0Zwp5ZIQAEbpFzA=,tag:dI8rU8+1ce/ZQgjVs7xOOA==,type:str]
+    lastmodified: "2022-05-21T07:31:13Z"
+    mac: ENC[AES256_GCM,data:KkKsaBgWQ3Q1R/ZzJDYmGl0JbbyXTYOyHjcm4nwIesOKU5k9A1o4XIgZJQg7AGmr/JdCAJUHrxsdF9p9ygSKtMBFRQjYRW0XE+hyhUF55Gi8DoKYYB+HQidxxooqG4F5IdZtc5d/Dtz7Q0AZnnkedJvxb8hXvaSOuu9huqOly6s=,iv:74jxLGDjS5qpSG5HTnGxiOiOHf2lybYvOSuj/R6ZXTA=,tag:EcEzk/O3QBdktf5XXF0fcw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
