debug logs for authelia

--- a/cluster/apps/auth/authelia/helm-release.yaml
+++ b/cluster/apps/auth/authelia/helm-release.yaml
@@ -50,7 +50,7 @@ spec:
       enabled: true
       log:
         ## Level of verbosity for logs: info, debug, trace.
-        level: info
+        level: debug
       theme: dark
       totp:
         issuer: "tinfoilforest.nz"
