--- a/cluster/apps/networking/ingressroutes/traefik-dash-ingressroute.yaml
+++ b/cluster/apps/networking/ingressroutes/traefik-dash-ingressroute.yaml
@@ -39,4 +39,4 @@ spec:
         - name: api@internal
           kind: TraefikService
   tls:
-    secretName: tinfoilforest-nz-tls
+    secretName: tinfoilforest-nz
