--- a/cluster/apps/networking/ingressroutes/auth-ingressroute.yaml
+++ b/cluster/apps/networking/ingressroutes/auth-ingressroute.yaml
@@ -15,4 +15,4 @@ spec:
           namespace: auth
           port: 80
   tls:
-    secretName: tinfoilforest-nz
+    secretName: tinfoilforest-nz-tls
