--- a/cluster/apps/networking/ingressroutes/lidarr-ingressroute.yaml
+++ b/cluster/apps/networking/ingressroutes/lidarr-ingressroute.yaml
@@ -18,4 +18,4 @@ spec:
           namespace: default
           port: 8686
   tls:
-    secretName: tinfoilforest-nz
+    secretName: tinfoilforest-nz-tls
