--- a/cluster/apps/auth/openldap/helm-release.yaml
+++ b/cluster/apps/auth/openldap/helm-release.yaml
@@ -24,7 +24,7 @@ spec:
       retries: 3
   values:
     global:
-      ldapDomain: tinfoilforest.nz
+      ldapDomain: "${SECRET_PUBLIC_DOMAIN}"
     existingSecret: auth-openldap-secrets
     customTLS:
       enabled: false
@@ -42,21 +42,21 @@ spec:
       enabled : false
     customLdifFiles:
       01-root.ldif: |-
-        dn: ou=people,dc=tinfoilforest,dc=nz
+        dn: ou=people,${SECRET_LDAP_BASE_DN}
         objectClass: organizationalUnit
         ou: people
 
-        dn: ou=groups,dc=tinfoilforest,dc=nz
+        dn: ou=groups,${SECRET_LDAP_BASE_DN}
         objectClass: organizationalUnit
         ou: groups
       10-ben.ldif: |-
-        dn: cn=ben,ou=groups,dc=tinfoilforest,dc=nz
+        dn: cn=ben,ou=groups,${SECRET_LDAP_BASE_DN}
         cn: ben
         gidNumber: 8742
         objectclass: top
         objectclass: posixGroup
         
-        dn: uid=ben,ou=people,dc=tinfoilforest,dc=nz
+        dn: uid=ben,ou=people,${SECRET_LDAP_BASE_DN}
         cn: ben
         givenName: Ben
         sn: ben
@@ -65,20 +65,20 @@ spec:
         gidNumber: 8742
         homeDirectory: /home/ben
         loginShell: /bin/bash
-        mail: ben@tinfoilforest.nz
+        mail: "${SECRET_ADMIN_EMAIL}"
         objectClass: top
         objectClass: inetOrgPerson
         objectClass: posixAccount
         objectClass: shadowAccount
         userPassword: {SSHA}x
       11-ness.ldif: |-
-        dn: cn=ness,ou=groups,dc=tinfoilforest,dc=nz
+        dn: cn=ness,ou=groups,${SECRET_LDAP_BASE_DN}
         cn: ness
         gidNumber: 8743
         objectclass: top
         objectclass: posixGroup
 
-        dn: uid=ness,ou=people,dc=tinfoilforest,dc=nz
+        dn: uid=ness,ou=people,${SECRET_LDAP_BASE_DN}
         cn: ness
         givenName: ness
         sn: ness
@@ -87,7 +87,7 @@ spec:
         gidNumber: 8743
         homeDirectory: /home/ness
         loginShell: /bin/bash
-        mail: ness@tinfoilforest.nz
+        mail: ${SECRET_PARTNER_EMAIL}
         objectClass: top
         objectClass: inetOrgPerson
         objectClass: posixAccount
