--- a/cluster/charts/helm/kustomization.yaml
+++ b/cluster/charts/helm/kustomization.yaml
@@ -8,3 +8,5 @@ resources:
   - authelia-charts.yaml
   - bitnami-charts.yaml
   - longhorn-charts.yaml
+  - prometheus-community-charts.yaml
+  - grafana-charts.yaml
