--- a/cluster/config/cluster-secrets.sops.yaml
+++ b/cluster/config/cluster-secrets.sops.yaml
@@ -5,8 +5,12 @@ metadata:
     namespace: flux-system
 type: Opaque
 stringData:
-    SECRET_EMAIL: ENC[AES256_GCM,data:TGwxayGw93klDIibKQ302+uD8Pg=,iv:gyDkZkr/pnPFKpUxFBoZDXaeSIXsqaoucXGH2Rkge4Y=,tag:fWVDOng4Ni8b+n0LqzoQhg==,type:str]
-    SECRET_PUBLIC_DOMAIN: ENC[AES256_GCM,data:fAkHgZRxmyCEEOOadUdpxQ==,iv:6BW1yRwKivN2mx/QGcmOxQOndqnIhX2/zmiCnC3l2oI=,tag:TBKmAj9kAK3Ke92BYFMPkg==,type:str]
+    SECRET_PUBLIC_DOMAIN: ENC[AES256_GCM,data:MgDplwX02G6Z773fHaqLLw==,iv:NAidvOX/3v0+fMpKv/QE7bVenegb/f58tKtAKgWFgHA=,tag:0YUBKjohUNpBqiUF0Z/MrA==,type:str]
+    SECRET_ADMIN_EMAIL: ENC[AES256_GCM,data:REPBmS68OZ/rND9ZHPDa+E0LlYo=,iv:BpYnR7htujt2KJoPMGj4yLrJNExIJWV/dIeh36qaFFg=,tag:l4RTS/AHIFr6yyG0zeYPEQ==,type:str]
+    SECRET_NOTIFICATION_EMAIL: ENC[AES256_GCM,data:bwQgAhcNEbg5eTiMaoKhnLmA/6N2BfhiArmfms1L,iv:+ClRicelfKj9p6jiAWijR7dcKxOJ6BA/Ypm+1D6dKmo=,tag:WuNprAE1FrGTVzlMOf7EVQ==,type:str]
+    SECRET_TEST_EMAIL: ENC[AES256_GCM,data:jtMt0hP6M/KMSZNes0bCbmRC+tLh,iv:uswjgPpf70hoMSpUcW13HOUk0K4zXnWEnGDHcaPddk8=,tag:8455105ikfio09YFvQEorw==,type:str]
+    SECRET_PARTNER_EMAIL: ENC[AES256_GCM,data:5DMNf5XIYtagL8LJMNJp3Zxjk+n2,iv:zysTh5rbWGHOPUJTugWycUAGam/zVg+n3UpJ9nRCIQI=,tag:7/th4qr8vHA9QZe82EeXCQ==,type:str]
+    SECRET_LDAP_BASE_DN: ENC[AES256_GCM,data:oq4XtZ8Icl1pkQblYNxiDdY1lYtYhw==,iv://i3TmT2Z8sTfHQZEoh05gS75IjvLJ7/3N5JHKdC2/c=,tag:cVRIoag7WqZ8P/w+EVm8Og==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +20,14 @@ sops:
         - recipient: age17r33fln8jyfzrdxshtnv38dmyst33q8g3c2c5f9r8lcvkxa4ggrq07sffm
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBzUzFrS2pWbUtNZ1lWN29r
-            VTVTUFo0S2I4MDBMQ2kxejZXV0ZTQTVoRGtBCmxYTlZvTEdLZkRhTk1KYkRBcWho
-            R01qLzZWMlB3NTdMd0pVcU51N1pxbTQKLS0tIEFoWVMzaEZxQVhxaDJ4bGplRlhN
-            RTdzTTJGTWZKcDg0YlBwTkxaeGxQUzgK30WEJvGK86tvqTKi4itIcPPg+kO4XUYA
-            R1rF37STqkxIgZYifWpWOGW7J5nBYzj1nbfv5DXR4vOqwviIKmlZ5w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBVSzAzZzZ2NXpybTBocFNE
+            VTQrb2RWWHY1dEtqcnAwY1NrSEh4ekNvcUFBCmpqU0tPZVdROFduM3FrcUFNRWJj
+            eHIrWHVBL0UyZzVEU2tDd3JBR2ozaXMKLS0tIGo4d1NFemx0RDBNaG0vNnNUZTlT
+            THRId09ITEFvYzhUZTl2RXgycTRXK1kKXfg7tRrDVRpTMk0m//x44ii3QBBHzrxz
+            TFE7Djgyh6VTRp5ub2VA/YOrskjpf0cD12MYwrt6q53PtNvapMK71Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-21T03:03:00Z"
-    mac: ENC[AES256_GCM,data:4Syk/XHpBqtFb88xmZn7xYEhw3OpKeEO4C6Kd6HMKuys9gGIHHT5/liuvm22Gbf8l3hBsFQsDK8xceCssMYOB9u194351uwxkA4OSTiLd3sD6Lpo2vC2grH+KUjGoFLQ2lhshEop4oU3OvHTK08a/ZBW9mY0rqyg2cGYfPyEFtY=,iv:6qCj3gIzEH+1y8ZvSMcjLWFfodsAWMahg6xg7H8cEEk=,tag:ftWm5VtGIQRlm7vePZhxVw==,type:str]
+    lastmodified: "2022-05-21T21:15:37Z"
+    mac: ENC[AES256_GCM,data:mtLt2MTtiniKV6TppyHy8mKruw0mAYyHSf8ngHJDnvnLKsuihmfJ0mxBwAwpVtnEp6BuTOi9Tn4V2kD5rwxE5n/Ivu0yMAV7ClO40u/gOXQLFswIPGzS87fq6qfGGBnZSFZ6wE+z4wnXts2QM1GT+BRZDdnHw/ZWEwfUTCJmyEc=,iv:vxDevn05tbsRTeW8gEH+nXuWu7YKIibx5W7HQm+CUL8=,tag:vpSLHGaiREfRTJwA5si3EA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
