--- a/cluster/apps/networking/ingressroutes/sonarr-ingressroute.yaml
+++ b/cluster/apps/networking/ingressroutes/sonarr-ingressroute.yaml
@@ -2,20 +2,20 @@
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
-  name: longhorn-ingress
+  name: sonarr-ingress
   namespace: networking
 spec:
   entryPoints:
     - websecure
   routes:
-    - match: "Host(`longhorn.${SECRET_PUBLIC_DOMAIN}`)"
+    - match: "Host(`sonarr.${SECRET_PUBLIC_DOMAIN}`)"
       kind: Rule
       middlewares:
       - name: chain-authelia-auth
         namespace: auth
       services:
-        - name: longhorn-frontend
-          namespace: longhorn-system
-          port: 80
+        - name: sonarr
+          namespace: default
+          port: 8989
   tls:
     secretName: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
