--- a/cluster/apps/networking/ingressroutes/traefik-dash-ingressroute.yaml
+++ b/cluster/apps/networking/ingressroutes/traefik-dash-ingressroute.yaml
@@ -18,7 +18,7 @@ spec:
   entryPoints:
     - websecure
   routes:
-    - match: (Host(`traefik.tinfoilforest.nz`) && !PathPrefix(`/api`))
+    - match: "(Host(`traefik.${SECRET_PUBLIC_DOMAIN}`) && !PathPrefix(`/api`))"
       kind: Rule
       middlewares:
         - name: chain-authelia-auth
@@ -29,7 +29,7 @@ spec:
         - name: api@internal
           kind: TraefikService
     # separate route for api without dash prefix removed
-    - match: (Host(`traefik.tinfoilforest.nz`) && PathPrefix(`/api`))
+    - match: "(Host(`traefik.${SECRET_PUBLIC_DOMAIN}`) && PathPrefix(`/api`))"
       kind: Rule
       middlewares:
         - name: chain-authelia-auth
@@ -38,4 +38,4 @@ spec:
         - name: api@internal
           kind: TraefikService
   tls:
-    secretName: tinfoilforest-nz-tls
+    secretName: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
