--- a/cluster/apps/networking/ingressroutes/uptime-kuma-ingressroute.yaml
+++ b/cluster/apps/networking/ingressroutes/uptime-kuma-ingressroute.yaml
@@ -2,20 +2,20 @@
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
-  name: lidarr-ingress
-  namespace: networking
+  name: uptime-kuma-ingress
+  namespace: default
 spec:
   entryPoints:
     - websecure
   routes:
-    - match: "Host(`lidarr.${SECRET_PUBLIC_DOMAIN}`)"
+    - match: "Host(`uptime.${SECRET_PUBLIC_DOMAIN}`)"
       kind: Rule
       middlewares:
       - name: chain-authelia-auth
         namespace: auth
       services:
-        - name: lidarr
+        - name: uptime-kuma
           namespace: default
-          port: 8686
+          port: 3001
   tls:
     secretName: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
