explicit pvc namespace

--- a/cluster/apps/default/grafana/pvc.yaml
+++ b/cluster/apps/default/grafana/pvc.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: pvc-grafana
-  namespace: longhorn
+  namespace: default
 spec:
   accessModes:
     - ReadWriteOnce
