--- a/cluster/apps/log-system/loki-stack/helm-values.yaml
+++ b/cluster/apps/log-system/loki-stack/helm-values.yaml
@@ -3,7 +3,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: loki
-  namespace: logs-system
+  namespace: log-system
 spec:
   interval: 15m
   chart:
