bugfixes and trying to mount grafana volume

--- a/cluster/apps/networking/ingressroutes/grafana-ingressroute.yaml
+++ b/cluster/apps/networking/ingressroutes/grafana-ingressroute.yaml
@@ -9,6 +9,9 @@ spec:
   routes:
     - match: "Host(`grafana.${SECRET_PUBLIC_DOMAIN}`)"
       kind: Rule
+      middlewares:
+      - name: chain-authelia-auth
+        namespace: auth
       services:
         - name: grafana
           port: 80
