--- a/cluster/apps/networking/ingressroutes/changedetection-io-ingressroute.yaml
+++ b/cluster/apps/networking/ingressroutes/changedetection-io-ingressroute.yaml
@@ -3,7 +3,7 @@ apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
   name: changedetection-io-ingress
-  namespace: default
+  namespace: networking
 spec:
   entryPoints:
     - websecure
