--- a/cluster/apps/networking/externalroutes/proxmox-externalroute.yaml
+++ b/cluster/apps/networking/externalroutes/proxmox-externalroute.yaml
@@ -66,7 +66,7 @@ spec:
       kind: Rule
       middlewares:
         - name: chain-authelia-auth
-          namespace: auth-system
+          namespace: auth
       services:
         - name: h0-proxy-externalname
           namespace: networking
