--- a/cluster/apps/networking/externalroutes/unifi-externalroute.yaml
+++ b/cluster/apps/networking/externalroutes/unifi-externalroute.yaml
@@ -66,7 +66,7 @@ spec:
   entryPoints:
     - websecure
   routes:
-    - match: "Host(`unifi${SECRET_PUBLIC_DOMAIN}`)"
+    - match: "Host(`unifi.${SECRET_PUBLIC_DOMAIN}`)"
       kind: Rule
       middlewares:
         - name: unifi-headers
