copypasta wrong host

--- a/cluster/apps/networking/ingressroutes/vaultwarden-ingressroute.yaml
+++ b/cluster/apps/networking/ingressroutes/vaultwarden-ingressroute.yaml
@@ -8,7 +8,7 @@ spec:
   entryPoints:
     - websecure
   routes:
-    - match: "Host(`uptime.${SECRET_PUBLIC_DOMAIN}`)"
+    - match: "Host(`vaultwarden.${SECRET_PUBLIC_DOMAIN}`)"
       kind: Rule
       middlewares:
       - name: chain-authelia-auth
