--- a/cluster/apps/default/vaultwarden/helm-release.yaml
+++ b/cluster/apps/default/vaultwarden/helm-release.yaml
@@ -20,7 +20,7 @@ spec:
   values:
     image:
       repository: vaultwarden/server
-      tag: v1.24.0
+      tag: 1.24.0
     env:
       TZ: "${TIMEZONE}"
     service:
