copying nginx conf

--- a/cluster/apps/networking/ingressroutes/vaultwarden-ingressroute.yaml
+++ b/cluster/apps/networking/ingressroutes/vaultwarden-ingressroute.yaml
@@ -34,12 +34,15 @@ spec:
           port: 80
     - match: "(Host(`vaultwarden.${SECRET_PUBLIC_DOMAIN}`) && Path(`/notifications/hub`))"
       kind: Rule
-      middlewares:
-      - name: vaultwarden-headers
-        namespace: networking
       services:
         - name: vaultwarden
           namespace: default
           port: 3012
+    - match: "(Host(`vaultwarden.${SECRET_PUBLIC_DOMAIN}`) && Path(`/notifications/hub/negotiate`))"
+      kind: Rule
+      services:
+        - name: vaultwarden
+          namespace: default
+          port: 80
   tls:
     secretName: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
