--- a/cluster/apps/networking/ingressroutes/vaultwarden-ingressroute.yaml
+++ b/cluster/apps/networking/ingressroutes/vaultwarden-ingressroute.yaml
@@ -33,7 +33,7 @@ spec:
   entryPoints:
     - websecure
   routes:
-    - match: "Host(`vaultwarden.${SECRET_PUBLIC_DOMAIN}`)"
+    - match: "Host(`vaultwarden-test.${SECRET_PUBLIC_DOMAIN}`)"
       kind: Rule
       middlewares:
       - name: vaultwarden-headers
@@ -42,7 +42,7 @@ spec:
         - name: vaultwarden
           namespace: default
           port: 80
-    - match: "(Host(`vaultwarden.${SECRET_PUBLIC_DOMAIN}`) && Path(`/notifications/hub`))"
+    - match: "(Host(`vaultwarden-test.${SECRET_PUBLIC_DOMAIN}`) && Path(`/notifications/hub`))"
       kind: Rule
       middlewares:
         - name: vaultwarden-redirectscheme
@@ -51,7 +51,7 @@ spec:
         - name: vaultwarden
           namespace: default
           port: 3012
-    - match: "(Host(`vaultwarden.${SECRET_PUBLIC_DOMAIN}`) && Path(`/notifications/hub/negotiate`))"
+    - match: "(Host(`vaultwarden-test.${SECRET_PUBLIC_DOMAIN}`) && Path(`/notifications/hub/negotiate`))"
       kind: Rule
       services:
         - name: vaultwarden
