modify rule order vw

--- a/cluster/apps/networking/ingressroutes/vaultwarden-ingressroute.yaml
+++ b/cluster/apps/networking/ingressroutes/vaultwarden-ingressroute.yaml
@@ -35,27 +35,27 @@ spec:
   routes:
     - match: "Host(`vaultwarden-test.${SECRET_PUBLIC_DOMAIN}`)"
       kind: Rule
-      middlewares:
-      - name: vaultwarden-headers
-        namespace: networking
+      # middlewares:
+      # - name: vaultwarden-headers
+      #   namespace: networking
       services:
         - name: vaultwarden
           namespace: default
           port: 80
-    - match: "(Host(`vaultwarden-test.${SECRET_PUBLIC_DOMAIN}`) && Path(`/notifications/hub`))"
-      kind: Rule
-      middlewares:
-        - name: vaultwarden-redirectscheme
-          namespace: networking
-      services:
-        - name: vaultwarden
-          namespace: default
-          port: 3012
     - match: "(Host(`vaultwarden-test.${SECRET_PUBLIC_DOMAIN}`) && Path(`/notifications/hub/negotiate`))"
       kind: Rule
       services:
         - name: vaultwarden
           namespace: default
           port: 80
+    - match: "(Host(`vaultwarden-test.${SECRET_PUBLIC_DOMAIN}`) && Path(`/notifications/hub`))"
+      kind: Rule
+      # middlewares:
+      #   - name: vaultwarden-redirectscheme
+      #     namespace: networking
+      services:
+        - name: vaultwarden
+          namespace: default
+          port: 3012
   tls:
     secretName: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
