--- a/cluster/apps/networking/ingressroutes/vaultwarden-ingressroute.yaml
+++ b/cluster/apps/networking/ingressroutes/vaultwarden-ingressroute.yaml
@@ -32,6 +32,7 @@ metadata:
 spec:
   entryPoints:
     - websecure
+    - web
   routes:
 
     # - match: "(Host(`vaultwarden-test.${SECRET_PUBLIC_DOMAIN}`) && Path(`/notifications/hub/negotiate`))"
