--- a/cluster/apps/networking/ingressroutes/vaultwarden-ingressroute.yaml
+++ b/cluster/apps/networking/ingressroutes/vaultwarden-ingressroute.yaml
@@ -38,13 +38,12 @@ spec:
     - websecure
     - web
   routes:
-
-    # - match: "(Host(`vaultwarden-test.${SECRET_PUBLIC_DOMAIN}`) && Path(`/notifications/hub/negotiate`))"
-    #   kind: Rule
-    #   services:
-    #     - name: vaultwarden
-    #       namespace: default
-    #       port: 80
+    - match: "(Host(`vaultwarden-test.${SECRET_PUBLIC_DOMAIN}`) && PathPrefix(`/notifications/hub/negotiate`))"
+      kind: Rule
+      services:
+        - name: vaultwarden
+          namespace: default
+          port: 80
     - match: "Host(`vaultwarden-test.${SECRET_PUBLIC_DOMAIN}`) && PathPrefix(`/notifications/hub`)"
       kind: Rule
       middlewares:
