--- a/cluster/apps/networking/ingressroutes/vaultwarden-ingressroute.yaml
+++ b/cluster/apps/networking/ingressroutes/vaultwarden-ingressroute.yaml
@@ -1,15 +1,15 @@
 
----
-apiVersion: traefik.containo.us/v1alpha1
-kind: Middleware
-metadata:
-  name: vaultwarden-headers
-  namespace: networking
-spec:
-  headers:
-    customRequestHeaders:
-      X-Forwarded-Proto: "https"
----
+# ---
+# apiVersion: traefik.containo.us/v1alpha1
+# kind: Middleware
+# metadata:
+#   name: vaultwarden-headers
+#   namespace: networking
+# spec:
+#   headers:
+#     customRequestHeaders:
+#       X-Forwarded-Proto: "https"
+# ---
 
 # Redirect to https
 apiVersion: traefik.containo.us/v1alpha1
@@ -19,32 +19,44 @@ metadata:
   namespace: networking
 spec:
   headers:
-    customRequestHeaders:
-      Connection: "keep-alive, Upgrade"
-      Upgrade: "WebSocket"
-  # redirectScheme:
-  #   scheme: https
-  #   permanent: true
+  redirectScheme:
+    scheme: https
+    permanent: true
 
 ---
 
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
-  name: vaultwarden-ingress
+  name: vaultwarden-web-ingress
   namespace: networking
 spec:
   entryPoints:
     - websecure
     - web
   routes:
-    - match: "(Host(`vaultwarden-test.${SECRET_PUBLIC_DOMAIN}`) && PathPrefix(`/notifications/hub/negotiate`))"
+    - match: "Host(`vaultwarden-test.${SECRET_PUBLIC_DOMAIN}`)"
       kind: Rule
       services:
         - name: vaultwarden
           namespace: default
           port: 80
-    - match: "Host(`vaultwarden-test.${SECRET_PUBLIC_DOMAIN}`) && PathPrefix(`/notifications/hub`)"
+
+  tls:
+    secretName: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
+
+---
+
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
+metadata:
+  name: vaultwarden-websocket-ingress
+  namespace: networking
+spec:
+  entryPoints:
+    - websecure
+  routes:
+    - match: "Host(`vaultwarden-test.${SECRET_PUBLIC_DOMAIN}`) && Path(`/notifications/hub`)"
       kind: Rule
       middlewares:
         - name: vaultwarden-websocket-redirectscheme
@@ -53,16 +65,5 @@ spec:
         - name: vaultwarden
           namespace: default
           port: 3012
-          # passHostHeader: true
-    - match: "Host(`vaultwarden-test.${SECRET_PUBLIC_DOMAIN}`)"
-      kind: Rule
-      # middlewares:
-      # - name: vaultwarden-headers
-      #   namespace: networking
-      services:
-        - name: vaultwarden
-          namespace: default
-          port: 80
-
   tls:
     secretName: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
