--- a/cluster/apps/default/vaultwarden/helm-release.yaml
+++ b/cluster/apps/default/vaultwarden/helm-release.yaml
@@ -23,6 +23,7 @@ spec:
       tag: 1.24.0
     env:
       TZ: "${TIMEZONE}"
+      WEBSOCKET_ENABLED: true
     service:
       main:
         ports:
