--- a/cluster/apps/default/vaultwarden/helm-release.yaml
+++ b/cluster/apps/default/vaultwarden/helm-release.yaml
@@ -22,7 +22,7 @@ spec:
       repository: vaultwarden/server
       tag: 1.24.0
     env:
-      TZ: "${TIMEZONE}"
+      # TZ: "${TIMEZONE}"
       WEBSOCKET_ENABLED: true
     service:
       main:
